# pynotas

./: .flake8  .gitignore  README.md  pyproject.toml
pynotas/: __init__.py  __main__.py  models.py  nu.py  parser.py  utils.py  xp.py
pynotas/companies/: avenue.py  nu.py  xp.py
