[tool.poetry]
name = "pynotas"
version = "0.1.0"
description = ""
authors = ["Arthur Zopellaro <arthurazsoares@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^3"
"pdfminer.six" = "^20221105"
pytz = "^2023"
pymupdf = "^1"

[tool.poetry.group.dev.dependencies]
ruff = "^0"
mypy = "^1"
types-pytz = "^2023"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
show_error_codes = true
enable_error_code = "ignore-without-code"
#exclude = ["venv"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[tool.poetry.scripts]
pynotas = 'pynotas.__main__:cli'
